# falkon

./: .gitignore  CMakeLists.txt  HACK.md  shell.nix
src/lib/app/: mainapplication.cpp
src/lib/autofill/: autofill.cpp
src/lib/tools/: scripts.cpp  scripts.h
src/plugins/: CMakeLists.txt
src/plugins/ZigPass/: CMakeLists.txt  Messages.sh  zigpass.json  zigpass_backend.cpp  zigpass_backend.h  zigpass_plugin.cpp  zigpass_plugin.h
